# contender

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  READM.md  README.md  contender-compose.yml  escudo.toml  generate_figures.py  release-plz.toml  univ2ConfigTest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
campaigns/: composite.toml  full-spectrum.toml  staged-example.toml
cli/: .gitignore  Cargo.toml  testfile.toml  univ2ConfigTest.toml
cli/src/: commands.rs  main.rs  testfile.rs  types.rs
client-tests/: .gitignore  Makefile  bench-all-chains.sh
contracts/: remappings.txt
crates/bundle_provider/: CHANGELOG.md  Cargo.toml
crates/bundle_provider/src/: bundle.rs  bundle_provider.rs  error.rs  lib.rs  revert_bundle.rs
crates/cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/cli/src/: commands.rs  error.rs  lib.rs  main.rs  util.rs
crates/cli/src/commands/: admin.rs  campaign.rs  common.rs  composefile.rs  composite.rs  contender_subcommand.rs  db.rs  error.rs  mod.rs  replay.rs  report.rs  rpc.rs  run.rs  setup.rs  snapshot.rs  spam.rs  spam_stream.rs  spamd.rs  types.rs
crates/cli/src/commands/report/: block_trace.rs  buckets.rs  cache.rs  command.rs  gen_html.rs  heatmap.rs  mod.rs  template.html  util.rs
crates/cli/src/commands/report/chart/: chart_id.rs  gas_per_block.rs  heatmap.rs  mod.rs  time_to_inclusion.rs  tx_gas_used.rs
crates/cli/src/commands/report/chart/drawable_charts/: gas_per_block.rs  heatmap.rs  mod.rs  pending_txs.rs  rpc_latency.rs  send_tx_latency.rs  time_to_inclusion.rs  trait.rs  tx_gas_used.rs
crates/cli/src/commands/spam/: command.rs  mod.rs
crates/cli/src/default_scenarios/: blobs.rs  builtin.rs  bytecode.rs  custom_contract.rs  eip7702.rs  erc20.rs  fill_block.rs  mod.rs  revert.rs  runconfig.rs  setcode.rs  storage.rs  stress.rs  transfers.rs  uni_v2.rs
crates/cli/src/default_scenarios/contracts/: SmartWallet.hex  SpamMe.hex  TestToken.hex  mod.rs
crates/cli/src/default_scenarios/eth_functions/: command.rs  mod.rs  opcodes.rs  precompiles.rs
crates/cli/src/default_scenarios/setcode/: base.rs  execute.rs  mod.rs
crates/cli/src/server/: command.rs  config.rs  error.rs  log_client.rs  mod.rs  sessions.rs  sse.rs
crates/cli/src/server/rpc_server/: server.rs  types.rs
crates/cli/src/server/static/: builtin_scenarios.js  docs.html  index.html  openrpc.json
crates/cli/src/util/: error.rs  mod.rs  provider.rs  utils.rs
crates/composefile/: Cargo.toml  README.md
crates/composefile/src/: composefile.rs  lib.rs  types.rs  utils.rs
crates/composefile/src/utils/: get_env_variables.rs  get_min_balance.rs  get_private_keys.rs  get_rpc_url.rs  get_testfile.rs  get_tx_type.rs  mod.rs  setup_object_json_builder.rs  spam_object_json_builder.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: agent_controller.rs  buckets.rs  error.rs  flashblocks.rs  lib.rs  orchestrator.rs  provider.rs  test_scenario.rs  util.rs
crates/core/src/bundle_provider/: bundle.rs  bundle_provider.rs  mod.rs  provider.rs  revert_bundle.rs
crates/core/src/constants/: mod.rs  setup_sim_end.txt  setup_sim_start.txt
crates/core/src/db/: error.rs  mock.rs  mod.rs  named_tx.rs  replay_report.rs  runs.rs  spam_duration.rs  trait.rs
crates/core/src/engine_provider/: auth_provider.rs  auth_provider_eth.rs  auth_provider_op.rs  auth_transport.rs  engine.rs  error.rs  traits.rs  valid_payload.rs
crates/core/src/eth_engine/: README.md  auth_provider.rs  auth_provider_eth.rs  mod.rs  util.rs  valid_payload.rs
crates/core/src/generator/: agent_pools.rs  bn254_points.rs  constants.rs  create_def.rs  error.rs  function_def.rs  mod.rs  named_txs.rs  templater.rs  trait.rs  types.rs  util.rs
crates/core/src/generator/seeder/: mod.rs  rand_seed.rs  trait.rs
crates/core/src/spammer/: blockwise.rs  blockwise2.rs  error.rs  mod.rs  spammer_trait.rs  timed.rs  timed2.rs  tx_actor.rs  tx_callback.rs  types.rs  util.rs
crates/engine_provider/: CHANGELOG.md  Cargo.toml  README.md
crates/engine_provider/src/: auth_provider.rs  auth_provider_eth.rs  auth_provider_op.rs  auth_transport.rs  engine.rs  error.rs  lib.rs  traits.rs  tx_adapter.rs  util.rs  valid_payload.rs
crates/report/: CHANGELOG.md  Cargo.toml
crates/report/src/: block_trace.rs  cache.rs  command.rs  error.rs  gen_html.rs  lib.rs  report_data.rs  template.html  template.html.handlebars  template_campaign.html.handlebars  template_rpc.html.handlebars  util.rs
crates/report/src/chart/: chart_id.rs  flashblock_index.rs  flashblock_time_to_inclusion.rs  gas_per_block.rs  heatmap.rs  mod.rs  pending_txs.rs  rpc_latency.rs  time_to_inclusion.rs  tx_gas_used.rs
crates/report/src/chart/drawable_charts/: gas_per_block.rs  heatmap.rs  pending_txs.rs  time_to_inclusion.rs  tx_gas_used.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: config.rs  error.rs  lib.rs  log_layer.rs  main.rs  rpc.rs  sessions.rs  sse.rs
crates/server/src/rpc_server/: mod.rs  server.rs  types.rs
crates/server/static/: index.html
crates/sqlite_db/: CHANGELOG.md  Cargo.toml
crates/sqlite_db/src/: ctx.rs  db.rs  error.rs  lib.rs
crates/testfile/: CHANGELOG.md  Cargo.toml
crates/testfile/src/: campaign.rs  error.rs  lib.rs  test_config.rs  types.rs
docs/: architecture.md  campaigns.md  cli.md  constructor_args.md  creating_scenarios.md  engine-api.md  examples.md  installation.md  library-usage.md  overview.md  placeholders.md  reports-db-admin.md  scenarios.md  server.md  stream-mode.md
e2e-tests/: 00_erc20_smoke.sh  README.md  check_vars.sh
scenarios/: blobs.toml  bondingCurve.toml  bridge.toml  bundles.toml  chainlinkOracle.toml  create2Factory.toml  diamondProxy.toml  dutchAuction.toml  erc1155.toml  erc4337.toml  erc4626vault.toml  erc721.toml  flashLoan.toml  governance.toml  groth16Verify.toml  lending.toml  mempool.toml  merkleAirdrop.toml  mevSandwich.toml  multicall3.toml  multisig.toml  nameRegistry.toml  orderBook.toml  precompileStress.toml  reverts.toml  setCode.toml  sharedEconomy.toml  (+17 more)
(+87 files in other folders)
