[workspace]
members = [
    "crates/bundle_provider",
    "crates/cli/",
    "crates/core/",
    "crates/engine_provider",
    "crates/report",
    "crates/sqlite_db/",
    "crates/testfile/",
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.86"
authors = ["Flashbots"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/contender"
repository = "https://github.com/flashbots/contender"

[workspace.dependencies]
contender_core = { path = "crates/core/" }
contender_sqlite = { path = "crates/sqlite_db/" }
contender_testfile = { path = "crates/testfile/" }
contender_bundle_provider = { path = "crates/bundle_provider/" }
contender_engine_provider = { path = "crates/engine_provider/" }
contender_report = { path = "crates/report/" }

eyre = "0.6.12"
tokio = { version = "1.40.0" }
tokio-util = "0.7"
alloy = { version = "1.0.22" }
alloy-signer = { version = "1.0.22", features = ["wallet"] }
serde = "1.0.209"
rand = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3" }
prometheus = "0.14"
strum = "0.27.1"

## cli
console-subscriber = "0.4.1"
ansi_term = "0.12.1"
clap = { version = "4.5.16" }
csv = "1.3.0"

## core
futures = "0.3.30"
async-trait = "0.1.82"
jsonrpsee = { version = "0.24" }
alloy-serde = "0.5.4"
serde_json = "1.0.132"
thiserror = "2.0.12"
tower = "0.5.2"
alloy-rpc-types-engine = { version = "1.0.22", default-features = false }
alloy-json-rpc = { version = "1.0.22", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
op-alloy-consensus = { version = "0.18.9", default-features = false }
op-alloy-network = { version = "0.18.9", default-features = false }
op-alloy-rpc-types = { version = "0.18.9", default-features = false }

## sqlite
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
r2d2 = "0.8.10"

## testfile
toml = "0.8.19"

## report
chrono = "0.4.39"
handlebars = "6.3.0"
regex = "1.11.1"
webbrowser = "1.0.3"
