[workspace]
members = [
    "crates/bundle_provider",
    "crates/cli",
    "crates/core",
    "crates/engine_provider",
    "crates/report",
    "crates/sqlite_db",
    "crates/testfile",
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.86"
authors = ["Flashbots"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/contender"
repository = "https://github.com/flashbots/contender"

[workspace.dependencies]
contender_cli = { path = "crates/cli" }
contender_core = { path = "crates/core" }
contender_sqlite = { path = "crates/sqlite_db" }
contender_testfile = { path = "crates/testfile" }
contender_bundle_provider = { path = "crates/bundle_provider" }
contender_engine_provider = { path = "crates/engine_provider" }
contender_report = { path = "crates/report" }

tokio = { version = "1.50.0" }
tokio-metrics = { version = "0.5.0" }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-util = "0.7"
alloy = { version = "=2.0.4", default-features = false }
alloy-signer = { version = "=2.0.4", features = ["wallet"] }
serde = "1.0.209"
rand = "0.10.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3" }
prometheus = "0.14"
strum = "0.28.0"
thiserror = "2.0.18"

## cli
console-subscriber = "0.5.0"
nu-ansi-term = "0.50.1"
clap = { version = "4.5.16" }
csv = "1.3.0"
miette = { version = "7.6.0" }
url = "2.5.7"
uuid = "1.19.0"
base64 = "0.22"

## server
axum = "0.8"
tokio-stream = "0.1"

## core
futures = "0.3.30"
async-trait = "0.1.82"
jsonrpsee = { version = "0.26" }
alloy-serde = { version = "=2.0.5", default-features = false }
serde_json = "1.0.132"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors"] }
alloy-rpc-types-engine = { version = "=2.0.4", default-features = false }
alloy-json-rpc = { version = "=2.0.4", default-features = false }
alloy-chains = { version = ">=0.2.17, <0.2.34", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
# reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0" }
# reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0" }
op-alloy-consensus = { version = "=2.0.0", default-features = false }
op-alloy-network = { version = "=2.0.0", default-features = false }
op-alloy-rpc-types = { version = "=2.0.0", default-features = false }
op-alloy-rpc-types-engine = { version = "=2.0.0", default-features = false }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"

## sqlite
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
r2d2 = "0.8.10"

## testfile
toml = "0.8.19"

## report
chrono = "0.4.44"
handlebars = "6.4.0"
regex = "1.11.1"
webbrowser = "1.0.3"
