[package]
name = "contender_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
alloy = { version = "0.3.6", features = ["full", "node-bindings"] }
csv = "1.3.0"
contender = { path = "../" }
contender_sqlite = { path = "../sqlite_db" }
toml = "0.8.19"
serde = { workspace = true }