[package]
name = "contender_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true }
contender = { path = "../" }
contender_sqlite = { path = "../sqlite_db" }
contender_testfile = { path = "../testfile" }

clap = { version = "4.5.16", features = ["derive"] }
alloy = { version = "0.3.6", features = ["full", "node-bindings"] }
csv = "1.3.0"
