[package]
name = "contender_bundle_provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Contender bundle provider"

[dependencies]
alloy = { workspace = true, features = ["node-bindings", "rpc-types-mev"] }
