[package]
name = "contender_bundle_provider"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Contender bundle provider"

[dependencies]
alloy = { workspace = true, features = ["node-bindings", "rpc-types-mev"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
