[package]
name = "contender_composefile"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Parsing Compose files for Contender"

[dependencies]
contender_core = { workspace = true }
alloy = {workspace = true}
serde = { workspace = true }

yaml-rust2 = "0.10.2"
hashlink = "0.10.0"


[dev-dependencies]
tempfile = "3.15.0"
