[package]
name = "contender_core"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Contender core library"

[dependencies]
alloy = { workspace = true, features = [
    "full",
    "node-bindings",
    "rpc-types-mev",
    "json-rpc",
    "provider-engine-api",
] }
alloy-rpc-types-engine = { workspace = true, features = ["std", "jwt"] }
alloy-json-rpc = { workspace = true }
async-trait.workspace = true
eyre = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

thiserror = { workspace = true }
reth-node-api = { workspace = true }
reth-rpc-layer = { workspace = true }
reth-optimism-node = { workspace = true }
reth-optimism-primitives = { workspace = true }
op-alloy-consensus = { workspace = true }
op-alloy-network = { workspace = true }
op-alloy-rpc-types = { workspace = true }
secp256k1 = { version = "0.30" }
