[package]
name = "contender_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Contender core library"

[dependencies]
contender_bundle_provider = { workspace = true }
contender_engine_provider = { workspace = true }

alloy = { workspace = true, features = ["full", "node-bindings"] }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
async-trait.workspace = true
futures = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
thiserror = { workspace = true }

[dev-dependencies]
contender_testfile = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["contender_testfile"]
