[package]
name = "contender_engine_provider"
version = "0.5.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Contender engine_ API provider"

[lib]
name = "contender_engine_provider"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true, features = [
    "full",
    "node-bindings",
    "rpc-types-mev",
    "json-rpc",
    "provider-engine-api",
] }
alloy-rpc-types-engine = { workspace = true, features = ["std", "jwt"] }
alloy-json-rpc = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait.workspace = true
tokio = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
eyre = { workspace = true }

# engine provider
reth-node-api = { workspace = true }
reth-rpc-layer = { workspace = true }
reth-optimism-node = { workspace = true }
reth-optimism-primitives = { workspace = true }
op-alloy-consensus = { workspace = true }
op-alloy-network = { workspace = true }
op-alloy-rpc-types = { workspace = true }
secp256k1 = { version = "0.30" }
