[package]
name = "contender_engine_provider"
description = "Contender engine_ API provider"
version = "0.10.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "contender_engine_provider"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true, features = [
    "full",
    "node-bindings",
    "rpc-types-mev",
    "json-rpc",
    "provider-engine-api",
    "reqwest-native-tls",
] }
alloy-rpc-types-engine = { workspace = true, features = ["std", "jwt"] }
alloy-json-rpc = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait.workspace = true
tokio = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }

# engine provider
reth-node-api = { workspace = true }
op-alloy-consensus = { workspace = true }
op-alloy-network = { workspace = true }
op-alloy-rpc-types = { workspace = true }
op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
secp256k1 = { version = "0.31" }

# ---------------------------------------------------------------------------
# Transitive dependency pins for downstream consumers.
#
# These deps are never compiled (cfg(any()) is always false) but they constrain
# cargo's version resolution so external crates that depend on contender_core
# get the exact same versions that contender was built against. Without these,
# cargo picks newer patch/minor versions with incompatible APIs.
# ---------------------------------------------------------------------------
[target.'cfg(any())'.dependencies]

## vergen — reth-node-core build script uses vergen-git2 which depends on
## vergen-lib; version 9.1.0 switched to a different vergen-lib major, causing
## trait conflicts. Pin to the 9.0.x series used by reth v1.8.2.
vergen = "=9.1.0"
vergen-git2 = "=1.0.7"
