[package]
name = "contender_report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
contender_core = { workspace = true }

alloy = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
handlebars = { workspace = true }
webbrowser = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
