[package]
name = "contender_sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
contender_core = { workspace = true }
r2d2_sqlite = {workspace = true}
rusqlite = {workspace = true}
r2d2 = {workspace = true}
alloy = { workspace = true }
serde = { workspace = true }
