[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "contender_sqlite"
description = "SQLite database for contender"
repository.workspace = true
rust-version.workspace = true
version = "0.4.4"

[dependencies]
alloy = { workspace = true }
contender_core = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
