[package]
name = "contender_testfile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
toml = {workspace = true}
alloy = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
contender_core = { workspace = true }
prometheus = { workspace = true }
