[package]
name = "contender_testfile"
description = "Definitions for contender scenarios to be encoded as TOML files."
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
toml = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
contender_core = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
contender_sqlite = { path = "../sqlite_db" }
